// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview sms form renders matches error snapshot 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-back-link nhsuk-u-margin-bottom-6 nhsuk-u-margin-left-3"
    >
      <a
        class="nhsuk-back-link__link"
        href="/edit-text-message-template/template-id"
      >
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__chevron-left"
          height="34"
          viewBox="0 0 24 24"
          width="34"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
          />
        </svg>
        Go back
      </a>
    </div>
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <div
        aria-labelledby="error-summary-title"
        class="nhsuk-error-summary"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="nhsuk-error-summary__title"
          data-testid="error-summary"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="nhsuk-list nhsuk-error-summary__list"
        >
          <li>
            <a
              href="#reviewSMSTemplateAction"
            >
              Select an option
            </a>
          </li>
        </ul>
      </div>
      <h1
        class="review__heading"
        data-testid="preview-message__heading"
      >
        <span
          class="nhsuk-caption-l"
          data-testid="preview-message__heading-caption"
        >
          Text message template
        </span>
        test-template-sms
      </h1>
      <details
        class="nhsuk-details"
        data-testid="preview-message-details"
      >
        <summary
          class="nhsuk-details__summary"
          data-testid="preview-message-details__heading"
        >
          <span
            class="nhsuk-details__summary-text"
          >
            Who your text message will be sent from
          </span>
        </summary>
        <div
          class="nhsuk-details__text"
          data-testid="preview-message-details__text"
        >
          <p>
            Set your text message sender name during onboarding.
          </p>
          <p>
            If you need to set up a different text message sender name for other messages, contact our onboarding team.
          </p>
        </div>
      </details>
      <div
        class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
      >
        <div
          class="preview"
        >
          <div
            class="nhsuk-grid-row preview__row"
          >
            <div
              class="nhsuk-grid-column-one-third preview__col"
            >
              <div
                class="preview__col_heading"
                data-testid="preview__heading-0"
                id="preview-heading-message"
              >
                Message
              </div>
            </div>
            <div
              class="nhsuk-grid-column-two-thirds col"
            >
              <div
                class="preview__col_content"
                data-testid="preview__content-0"
                id="preview-content-message"
              />
            </div>
          </div>
        </div>
      </div>
      <form
        action="/action"
      >
        <input
          name="form-id"
          readonly=""
          type="hidden"
          value="review-sms-template"
        />
        <div
          class="nhsuk-form-group nhsuk-form-group--error"
        >
          <fieldset
            class="nhsuk-fieldset"
          >
            <legend
              class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
              data-testid="reviewSMSTemplateAction-form__legend"
            >
              What would you like to do next with this template?
            </legend>
            <div
              class="nhsuk-form-group nhsuk-form-group--error"
            >
              <span
                class="nhsuk-error-message"
                id="reviewSMSTemplateAction-error-message"
              >
                <span
                  class="nhsuk-u-visually-hidden"
                >
                  Error: 
                </span>
                Select an option
              </span>
              <div
                aria-describedby="reviewSMSTemplateAction--error-message"
                class="nhsuk-radios"
                id="reviewSMSTemplateAction"
              >
                <div
                  class="nhsuk-radios__item"
                >
                  <input
                    class="nhsuk-radios__input"
                    data-testid="sms-edit-radio"
                    id="reviewSMSTemplateAction-sms-edit"
                    name="reviewSMSTemplateAction"
                    type="radio"
                    value="sms-edit"
                  />
                  <label
                    class="nhsuk-label nhsuk-radios__label"
                    for="reviewSMSTemplateAction-sms-edit"
                    id="reviewSMSTemplateAction-sms-edit--label"
                  >
                    Edit
                  </label>
                </div>
                <div
                  class="nhsuk-radios__item"
                >
                  <input
                    class="nhsuk-radios__input"
                    data-testid="sms-submit-radio"
                    id="reviewSMSTemplateAction-sms-submit"
                    name="reviewSMSTemplateAction"
                    type="radio"
                    value="sms-submit"
                  />
                  <label
                    class="nhsuk-label nhsuk-radios__label"
                    for="reviewSMSTemplateAction-sms-submit"
                    id="reviewSMSTemplateAction-sms-submit--label"
                  >
                    Submit
                  </label>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <button
          aria-disabled="false"
          class="nhsuk-button"
          data-testid="submit-button"
          id="review-sms-template-submit-button"
          type="submit"
        >
          Continue
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Preview sms form renders matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-back-link nhsuk-u-margin-bottom-6 nhsuk-u-margin-left-3"
    >
      <a
        class="nhsuk-back-link__link"
        href="/edit-text-message-template/template-id"
      >
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__chevron-left"
          height="34"
          viewBox="0 0 24 24"
          width="34"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"
          />
        </svg>
        Go back
      </a>
    </div>
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <h1
        class="review__heading"
        data-testid="preview-message__heading"
      >
        <span
          class="nhsuk-caption-l"
          data-testid="preview-message__heading-caption"
        >
          Text message template
        </span>
        test-template-sms
      </h1>
      <details
        class="nhsuk-details"
        data-testid="preview-message-details"
      >
        <summary
          class="nhsuk-details__summary"
          data-testid="preview-message-details__heading"
        >
          <span
            class="nhsuk-details__summary-text"
          >
            Who your text message will be sent from
          </span>
        </summary>
        <div
          class="nhsuk-details__text"
          data-testid="preview-message-details__text"
        >
          <p>
            Set your text message sender name during onboarding.
          </p>
          <p>
            If you need to set up a different text message sender name for other messages, contact our onboarding team.
          </p>
        </div>
      </details>
      <div
        class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
      >
        <div
          class="preview"
        >
          <div
            class="nhsuk-grid-row preview__row"
          >
            <div
              class="nhsuk-grid-column-one-third preview__col"
            >
              <div
                class="preview__col_heading"
                data-testid="preview__heading-0"
                id="preview-heading-message"
              >
                Message
              </div>
            </div>
            <div
              class="nhsuk-grid-column-two-thirds col"
            >
              <div
                class="preview__col_content"
                data-testid="preview__content-0"
                id="preview-content-message"
              />
            </div>
          </div>
        </div>
      </div>
      <form
        action="/action"
      >
        <input
          name="form-id"
          readonly=""
          type="hidden"
          value="review-sms-template"
        />
        <div
          class="nhsuk-form-group"
        >
          <fieldset
            class="nhsuk-fieldset"
          >
            <legend
              class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
              data-testid="reviewSMSTemplateAction-form__legend"
            >
              What would you like to do next with this template?
            </legend>
            <div
              class="nhsuk-form-group"
            >
              <div
                class="nhsuk-radios"
                id="reviewSMSTemplateAction"
              >
                <div
                  class="nhsuk-radios__item"
                >
                  <input
                    class="nhsuk-radios__input"
                    data-testid="sms-edit-radio"
                    id="reviewSMSTemplateAction-sms-edit"
                    name="reviewSMSTemplateAction"
                    type="radio"
                    value="sms-edit"
                  />
                  <label
                    class="nhsuk-label nhsuk-radios__label"
                    for="reviewSMSTemplateAction-sms-edit"
                    id="reviewSMSTemplateAction-sms-edit--label"
                  >
                    Edit
                  </label>
                </div>
                <div
                  class="nhsuk-radios__item"
                >
                  <input
                    class="nhsuk-radios__input"
                    data-testid="sms-submit-radio"
                    id="reviewSMSTemplateAction-sms-submit"
                    name="reviewSMSTemplateAction"
                    type="radio"
                    value="sms-submit"
                  />
                  <label
                    class="nhsuk-label nhsuk-radios__label"
                    for="reviewSMSTemplateAction-sms-submit"
                    id="reviewSMSTemplateAction-sms-submit--label"
                  >
                    Submit
                  </label>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <button
          aria-disabled="false"
          class="nhsuk-button"
          data-testid="submit-button"
          id="review-sms-template-submit-button"
          type="submit"
        >
          Continue
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
